# bagel-mean-variance

./: .gitignore  README.md  pyproject.toml
docs/: core.md
src/bagel-mean-variance/: core.py
src/bagel_mean_variance/: __init__.py  class_implementation.py  core.py
tests/: test_class_implemenation.py  test_core.py
