[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "bagel-mean-variance"
version = "0.0.0"
authors = [
  { name="Yanzhong(Eric) Huang", email="eric.yanzhong.huang@gmail.com" },
]
description = "Mean-Variance Portfolio Optimization"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.2.0",
]   

[project.urls]
Homepage = "https://github.com/bagelquant/bagel-mean-variance"
Issues = "https://github.com/bagelquant/bagel-mean-variance/issues"
